reorganized instset package uris. fsSpace now has proper handling of binary files. A binary file that is executable is considered an inst. No conversion needed. Same shell scripts given shebangs. mimeq is used to access the string representation of a shell script. Model works really well. Rebuilt the docs.